--- a/styles/global.css
+++ b/styles/global.css
@@ -7,37 +7,80 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    color: rgb(222, 230, 231);
 }
 
 .container {
-    max-width: 800px;
+    width: 100%;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
 }
 
+.overflow {
+    overflow: auto;
+}
+
+.container.compact {
+    max-width: 800px;
+}
+
 header, footer {
-    background: #333;
+    background: #222327;
     color: white;
-    padding: 20px 0;
+    padding: 20px;
     text-align: center;
+}
+
+header > div, footer > div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+footer {
+    padding: 5px;
+    margin-top: auto;
+    opacity: 0.4;
+    font-size: small;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: rgb(13, 13, 14);
+}
+
+section {
+    overflow: auto;
+}
+
+.muted {
+    color: gray;
 }
 
 .blog-content {
     padding: 40px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .cards-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 30px;
     padding: 20px 0;
+    width: 100%;
 }
 
 .card {
-    border: 1px solid #ddd;
+    border: 1px solid #4e4e4e;
     border-radius: 8px;
     overflow: hidden;
     transition: transform 0.3s ease;
+    background-color: #222327;
 }
 
 .card:hover {
@@ -46,7 +89,7 @@ header, footer {
 
 .card img {
     width: 100%;
-    height: 200px;
+    height: 120px;
     object-fit: cover;
 }
 
@@ -55,8 +98,7 @@ header, footer {
 }
 
 .card h2 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
+    font-size: 1rem;
 }
 
 .card-date {
@@ -67,4 +109,14 @@ header, footer {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    background: #222327;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #4e4e4e;
+    border-radius: 10px;
 }
